--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "mxgraph": "^4.2.2",
+    "rxjs": "^6.6.7",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vue-svgicon": "^3.2.9",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -31,9 +34,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
+    "ts-mxgraph-factory": "^4.0.8-rc1",
     "typescript": "~4.1.5"
   }
 }
