--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env",
-      "src/types"
+      "webpack-env"
     ],
     "paths": {
       "@/*": [
