--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,10 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
-    "types": [
-      "webpack-env"
+    "typeRoots": [
+      // "src/types",
+      "node_modules/@typed-mxgraph",
+      "node_modules/@types",
     ],
     "paths": {
       "@/*": [
