--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.44",
     "jwchat": "^0.3.9",
+    "mockjs": "^1.1.0",
     "mxgraph": "^4.2.2",
     "rxjs": "^6.6.7",
     "vue": "^3.0.0",
