--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .DS_Store
 node_modules
-examples
-/dist
+package-lock.json
 
 
 # local env files
@@ -12,7 +11,6 @@ examples
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -22,3 +20,6 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+/src/**/*.js
+/src/**/*.js.map
