--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.44",
+    "js-cookie": "^2.2.1",
     "jwchat": "^0.3.9",
     "mockjs": "^1.1.0",
     "mxgraph": "^4.2.2",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@typed-mxgraph/typed-mxgraph": "^1.0.1",
+    "@types/js-cookie": "^2.2.6",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
